# cc_rules_as_code

./: README.md  demo-script.md  how-it-works-deck.html  how-it-works.md  investor-deck.html  product-brainstorm-openleave.md  pyproject.toml  rules-as-code-survey.md  sales-pitch.md
docs/: index.html
openleave/: __init__.py  api.py  checker.html  coverage.py  engine.py  facts.py  interactions.py  mcp_server.py  parameters.json  parameters.py
openleave/regimes/: __init__.py  california.py  fmla.py  massachusetts.py  minnesota.py  new_jersey.py  new_york.py  washington.py
openleave/watcher/: __init__.py  analyzer.py  cli.py  proposals.py  validator.py
proposals/: prop-20260718-072a7b.json
samples/amendments/: mn_sf_2199_2027.txt  ny_saww_2027.txt
tests/: test_api.py  test_coverage.py  test_mcp_server.py  test_regimes.py  test_regimes_wa_ma_nj.py  test_watcher.py
