[project]
name = "openleave"
version = "0.1.0"
description = "Executable, citation-backed encoding of U.S. employee leave law (prototype)"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "pydantic>=2.6", "uvicorn>=0.29"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["openleave", "openleave.regimes"]

[tool.setuptools.package-data]
openleave = ["checker.html"]
